--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -3,12 +3,12 @@
 An initial experimental proof of principle experiment was performed at the SACLA FEL.
 The experiments consisted of three parts: First, reproducing XXX and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$\alpha$  fluorescence and an reconstruction in the small angle regime. Second, moving the a smaller length scale and try to image nanoparticles. And Third, leaving the small angle regime and record the fluoresccne of a single crystal and perform a reciprocal space reconstruction.
 \section{Sample Preparation and Characterization}
-As an nanoparticle sample, spherical iron oxide nanoparticles where chosen. To improve the number of detected fluorescence photons per FEL shot, the decision was made to have many particles many for each shot within the focus. This ensures a higher number of fluorescence photons recorded and basically eliminates the possibility of having shots without any particles inside the focus. 
+As an nanoparticle sample, spherical iron oxide nanoparticles are chosen. To improve the number of detected fluorescence photons per FEL shot, a preparation allowing (statistically) multiple particles inside the focus is chosen. This greatly reduces the possibility of having shots without any particles inside the focus as well.
 
-Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) were filtered using a prefilled column to remove the Inhibitor,  2,2-azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) was used as thermally activated radical initiator as received. Polystyrene (Sigma Aldrich, MW XXX) was used as received. As solvents, Methanol, Toluene and Chloroform were used.
-\subsection{Nanoparticles in Polystyrene Matrix}
-The nanoparticles were precipitated with Methanol, centrifuged and redispersed in Chloroform at a concentration of 25\,mg/ml, whereas the weight of nanoparticles includes the weight of the oleic acid capping. Polystyrene was dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution were added (to account for the different iron contents) to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of XXX\,ul the solution were dropped onto glass slides and dried. After drying, the approximately 200\,um thick films were carefully removed from the glass slides.
-As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissolved in 6ml acetone, sonicated and  fractions of XXX were dropped onto slowly spinning glass slides (XXX rpm for XX 5\,min) and carefully removed after drying.
+Magnetite Nanoparticles coated with oleic acid dispersed in toluene is bought from NN-Labs, inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) is filtered using a prefilled column to remove the Inhibitor,  2,2-azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) is used as thermally activated radical initiator as received. Polystyrene (Sigma Aldrich, MW ~192k) is used as received. As solvents, Methanol, Toluene and Chloroform are used.
+\subsection{Nanoparticles in Polystyrene Matrix} 
+The nanoparticles are precipitated with methanol, centrifuged and redispersed in chloroform at a concentration of 25\,mg/ml (with the weight of nanoparticles including the weight of the oleic acid capping). Polystyrene is dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution are added to account for the different iron contents to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of 200\,ul the solution are carefully dropped onto slowly spinning (100 rpm for 5\,min) glass cover slips (20mm x 20 mm). After drying, the approximately 200\,um thick films are removed from the glass slides.
+As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissolved in 6ml acetone, sonicated and  fractions of 200\,uL were dropped onto slowly spinning glass slides  and carefully removed after drying.
 \begin{table}[tp]
 	\centering
 	\caption{Nanoparticles in Polystyrene recipes}
@@ -26,10 +26,10 @@ As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissol
 \end{table}
 
 \subsection{Nanoparticles in Poly-(methyl methacrylate / etylhexyl methacrylate)  Matrix}
-As a second nanoparticle in polymer sample, an Azobisisobutyronitrile (AIBN) initiated methyl methacrylate (MMA)/etylhexyl methacrylate (EHMA) polymerisation with magnetite nanoparticles was performed. 
-The nanoparticle solution was concentrated to XXX in toluene by precipitation, centrifugation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and additional toluene, 800\,ul of EHMA was added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled again with N$_2$  for 10\,min before heating it up to XXX using a water bath under weak sonication using a sonic bath. The mixture was kept at XXX for XXX.
-The vials were uncapped and the polymer dried for 12h at XXX. The polymer was removed from the vials and cut into slices of approximatly XXX thickness using a slow spinning diamond saw.
-As a control sample, the polymerisation was performed without any nanoparticles added.
+As a second nanoparticle in polymer sample, an Azobisisobutyronitrile (AIBN) initiated methyl methacrylate (MMA)/etylhexyl methacrylate (EHMA) polymerisation with magnetite nanoparticles is performed. 
+The nanoparticle solution is concentrated to XXX in toluene by precipitation, centrifugation and redispersion. To account for the different iron concentration, to slightly varying amounts of the nanoparticle solution and additional toluene, 800\,ul of EHMA is added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA are added and the solution  bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN is added and the solution is bubbled again with N$_2$  for 10\,min before heating to XX using a water bath under weak sonication using a sonic bath. The mixture is kept at temperature for XXX.
+The vials are uncapped and the polymer dried for 12h at 60°C. The polymer is removed from the vials and cut into slices of approximately (150$\pm$20)\,um thickness using a slow spinning diamond saw.
+As a control sample, the polymerisation is performed without any nanoparticles added.
 
 \begin{table}[tp]
 	\centering
@@ -49,7 +49,7 @@ As a control sample, the polymerisation was performed without any nanoparticles 
 \end{table}
 
 \subsection{Nanoparticle Sample Characterisation}
-Before sample preparation, the iron oxide nanoparticles as received were diluted with Toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal "20\,nm" diameter) 4.1$\pm$0.8 \,nm	("10\,nm" diameter) 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
+To characterize the nanoparticles before the embedding in a polymer, the iron oxide nanoparticles as received are diluted with toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane are analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal "20\,nm" diameter) 4.1$\pm$0.8 \,nm	("10\,nm" diameter) 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
 
 \begin{figure}[tp]
 	\centering
@@ -78,7 +78,7 @@ Before sample preparation, the iron oxide nanoparticles as received were diluted
 .
 
 
-SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5. Samples were measured at 12\,keV for at two different spots for 5\,min each and averaged, a subtraction of the polymer matrix background was performed and a size distribution of spherical particles with hardsphere interaction was fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a guinier-porod function, see \fref{fig:saxsps}  and  \fref{fig:saxspmma} \cite{percus1958,feigin1987,Ilavsky2009}.
+SAXS (small angle X-ray scattering) measurements of the prepared nanoparticle polymer foils are performed at the SSRL beamline 1-5. Samples are measured at 12\,keV for at two different spots for 5\,min each and averaged, a subtraction of the polymer matrix background is performed and a size distribution of spherical particles with hard-sphere interaction fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a Guinier-Porod function, see \fref{fig:saxsps}  and  \fref{fig:saxspmma} \cite{percus1958,feigin1987,Ilavsky2009}.
 The measurements do not show a clear and significant difference between the two polymer matrices. According to the regressions, the aggregates seem to have a radius of gyration of 20-30\,nm (the straylight limits the measurement validity in those small q areas), the Porod parameter $P$ of 2.5-3.8 suggests a dimensionality of the aggregates between 2 and 3 \cite{feigin1987,lili2005}. The radii of the form factor agree within the corresponding margin of error with the values of determined by TEM measurements, the difference between the radius parameters of the structure factors and the form factor is most likely caused by the thin layer of oleic acid ligands between aggregating particles.
 
 
@@ -116,8 +116,11 @@ The measurements do not show a clear and significant difference between the two 
 The SAXS measurements give a reasonably good insight into the expected results of the IDI scheme measurement of the same sample, which will differ due to the iron specificity and the smaller focal volume in the latter.  
 
 \subsection{GaAs Crystal Films}
-As a crystalline sample GaAs was chosen for its simple fcc structure and large product of the gallium K-shell fluorescence Energy and lattice constant. The samples were prepared by Ben Reeves at the Stanford Nanofabrication Facility. 
-Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The speciman was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,um thick fused silica cover slip with the 5\,um film layer facing towards the silica. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,um thin GaAs films glued onto the the quartz slides (see \fref{fig:gaas_sample}).  XRD with Cu K-alpha was used to measure the width of the (004) GaAs bragg peak as 0.004°, indicative of high quality single crystals. 
+As a crystalline sample GaAs is chosen for its simple fcc structure and large product its lattice constant and the gallium K${_\alpha}$ fluorescence energy, resulting in lower scattering angles necessary to record the Bragg peaks compared to other commonly used single crystals. 
+
+Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaAs film are grown on an epi-ready (100)±0.1° GaAs substrate. The specimen is cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,um thick fused silica cover slip with the 5\,um film layer facing towards the silica. The substrate and the AlGaAs layer are selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This leaves 5\,um thin GaAs films glued onto the the quartz slides (see \fref{fig:gaas_sample}).  XRD with Cu K-alpha is used to measure the width of the (004) GaAs bragg peak as 0.004°, indicative of high quality single crystals. 
+
+The samples have been prepared by Ben Reeves at the Stanford Nanofabrication Facility. 
 
 \begin{figure}[tp]
 	\centering
@@ -130,7 +133,7 @@ Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaA
 \section{Setup of the Experiment}
 The setup used at the experimental station EH5 at SACLA is shown in \fref{fig:setup}. 
 
-The sample was mounted in an XXX angle to the beam on an XXX axis stage to allow scanning of the sample, ensure perpendicularly of the scanning directions to the beam to stay within the Rayleigh length of approx. XXX\,um while also ensuring a parallel alignment of the sample surface to one of the detectors. Overall, two MPCCD detectors were used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a Short Working Distance octal detector, consisting of eight 512x1024 tiles, parallel to the sample surface in a distance $d_{octal}$ ranging from XXX to XXX cm. To supress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows was installed in between the sample and the dual detector
+The sample was mounted in an XXX angle to the beam on an XXX axis stage to allow scanning of the sample, ensure perpendicularly of the scanning directions to the beam to stay within the Rayleigh length of approx. XXX\,um while also ensuring a parallel alignment of the sample surface to one of the detectors. Overall, two MPCCD detectors were used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a Short Working Distance octal detector, consisting of eight 512x1024 tiles, parallel to the sample surface in a distance $d_{octal}$ ranging from XXX to XXX cm. To suppress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows was installed in between the sample and the dual detector
 An L-shaped aluminum plate was installed to reduce stray light as well as to allow mounting of the beamstop and filters between sample and detector.
 
 The samples were scanned with a mean step size of 20\,um in horizontal direction (fast scanning direction) and 20\,um in vertical direction.between shots. The step size was chosen based on the crater size visible with an optical microscope of approximately 5-10\,um for the samples and energies used in the experiment.
@@ -144,9 +147,9 @@ The samples were scanned with a mean step size of 20\,um in horizontal direction
 \paragraph{Imaging the Focus}
 To image the focus, 500\,nm iron (Goodfellow), 10\,um iron (Nilaco), 5\,um (Nilaco) and 20\,um (Goodfellow) copper foils with purity >99.99\% foils are mounted on the sample holder. The fluorescence is recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
 \paragraph{Imaging Nanoparticles}
-For imaging the prepared iron nanoparticle and reference samples, the vacuum tube in front of the dual detector is partially removed to allow moving the octal detector, which will be the main imaging detector, to $d_\text{octal}\approx$43\,cm. The sample is slighly moved out of focus along the beam direction by 400\,um instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10,um iron foil measurement using the dual detector is taken to confirm the beam conditions.
+For imaging the prepared iron nanoparticle and reference samples, the vacuum tube in front of the dual detector is partially removed to allow moving the octal detector, which will be the main imaging detector, to $d_\text{octal}\approx$43\,cm. The sample is slightly moved out of focus along the beam direction by 400\,um instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10,um iron foil measurement using the dual detector is taken to confirm the beam conditions.
 \paragraph{Imaging Crystals}
-For imaging GaAs single crystal samples, the distance between the octal detector and the sample is shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). To reduce the amount of non-fluorescence photons  (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector, a 25\,um zinc filter is installed on the filter holder. The crystal surface is aligned to be parallel to the detector plane, and the scanning direction are aligned to be along the crystal surface within less than 1°. The x-ray beam is attenuated by 0.4\,mm silcon, resulting in 20-30\,uJ pulse energy at the sample for pulse energies at the upstream energy monitors of 400\,uJ \cite{yabashi2015}.
+For imaging GaAs single crystal samples, the distance between the octal detector and the sample is shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). To reduce the amount of non-fluorescence photons  (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector, a 25\,um zinc filter is installed on the filter holder. The crystal surface is aligned to be parallel to the detector plane, and the scanning direction are aligned to be along the crystal surface within less than 1°. The x-ray beam is attenuated by 0.4\,mm silicon, resulting in 20-30\,uJ pulse energy at the sample for pulse energies at the upstream energy monitors of 400\,uJ \cite{yabashi2015}.
 
 \section{Data Processing and Analysis}
 As the amount of recorded data is huge, an efficient strategy for filtering on shots, preprocessing the data to eliminate interference and finally reconstruction has to be implemented.
@@ -195,7 +198,7 @@ Masks for both detectors were created based on the standard deviation in dark im
 The masks were dilated by 5 pixels.
 
 \paragraph{Detector Artifacts}
-During the experiment, an unnoticed failure of the electronics of the octal detector has occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile are affected (in contrast to common-mode effects commonly encountered with different detectors). As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns are first identified by filtering on the fourier transform, neighboring effected columns are considered as a block and the medians over those block is calculated and subtracted. This scheme is chosen instead of the more commonly used portwise common modes due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduces the artifact, but does not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the feautures of the samples and only two orthogonal lines, it can be masked out.
+During the experiment, an unnoticed failure of the electronics of the octal detector has occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile are affected (in contrast to common-mode effects commonly encountered with different detectors). As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns are first identified by filtering on the Fourier transform, neighboring effected columns are considered as a block and the medians over those block is calculated and subtracted. This scheme is chosen instead of the more commonly used portwise common modes due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduces the artifact, but does not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the features of the samples and only two orthogonal lines, it can be masked out.
 
 
 
@@ -313,7 +316,7 @@ The detector shift is corrected before calculating the correlations, the rotatio
 \subsection{Reconstruction}
 For the foil data, the small angle approximation is valid and each pixel can be thought of as having the same XXX angle, permitting using the pixelwise correlation as a reconstruction.
 
-For the nanoparticle data, detection angle is higher and therefor the $\delta q$ is lower for pixels further of axis. Therefor, for each pixel the $q$ value is calculated and a radial correlation with the corrected values	 is performed.
+For the nanoparticle data, detection angle is higher and therefor the $\delta q$ is lower for pixels further of axis. Therefor, for each pixel the $q$ value is calculated and a radial correlation with the corrected values is performed.
 
 For the crystal data, a full 3d correlation in $q$ space is performed.
 
@@ -321,7 +324,7 @@ For the crystal data, a full 3d correlation in $q$ space is performed.
 \section{Results}
 \subsection{Imaging the Focus}
 
-The regression of the spectra results in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,um copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, a the regression provides a rough estimate of 15-25. This number seems lower than expected, but one has to keep in mind that the regression scheme as a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this is an indicator that the $M$ is much higher than the "optimal" value for unpolarized of light of $M=2$, resulting in severely reduced signal and therefor SNR.
+The regression of the spectra results in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,um copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, a the regression provides a rough estimate of 15-25. This number seems lower than expected, but one has to keep in mind that the regression scheme as a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this is an indicator that the $M$ is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced signal and therefor SNR.
 
 The charge sharing approximation parameter $p$ is found to be 0.43$\pm$0.01, meaning roughly 40\% of the photon hits are affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe leads to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single photon energy.
 
@@ -381,18 +384,18 @@ As the 5\,um and 10\,um foils suffer from severe undersampling along the horizon
 	\centering
 	\begin{subfigure}[b]{0.8\textwidth}
 		\includegraphics[width=\linewidth]{images/resultnano2dr.pdf}
-		\caption{Calculated $g^2$ images of different nanoparticle samples.}
+		\caption{Calculated $g^2$ images of for two nanoparticle samples and two reference samples.}
 		\label{fig:resnano2d}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.8\textwidth}
 		\includegraphics[width=\linewidth]{images/resultnano.pdf}
-		\caption{Radial profiles of $g^2$ for two nanoparticle samples and two reference samples.}
+		\caption{Radial profiles of $g^2$ for different nanoparticle samples.}
 		\label{fig:resnanorad}
 	\end{subfigure}
 	\caption[Results Nanoparticles]{\textbf{(a)} 2d images of the calculated $g^2$ of fluorescence patterns recorded on the octal detector of two nanoparticle-in-copolymer samples with 10\,nm and 20\,nm nominal diameter in comparison to two different baseline samples, (mostly homogeneous in the polymer distributed) iron chloride and the polymer matrix without any added iron. The detector artifacts are almost completely removed in those images. \textbf{(b)} Radial profiles and standard error of the mean of the calculated $g^2$ of two differently sized nanoparticles in the two different polymer matrices. None of the expected features are visible in the reconstruction. }
 	\label{fig:resnano}
 \end{figure}
-Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined, using an iron chloride in polymer sample, there are rougly equal amounts photons at the iron K-energy as in the nanoparticle samples and the effect of uncorrected detector artifacts could be seen. Neither seem to causes a strong correlation signal (see \fref{fig:resnano2d}). 
+Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined, using an iron chloride in polymer sample, there are roughly equal amounts photons at the iron K-energy as in the nanoparticle samples and the effect of uncorrected detector artifacts could be seen. Neither seem to causes a strong correlation signal (see \fref{fig:resnano2d}). 
 \subsubsection{Filtering}
 \subsection{Imaging Crystals}
 The shape of the reconstructed volume is 3750x4032x567 pixels$^3$.
