--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1242,6 +1242,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   school = {{Friedrich-Alexander-Universit\"at}},
   title  = {Enhancing x-ray diffractive imaging andoptical microscopy by use of intensity correlations},
   year   = {2019},
+  type   = {PhD Thesis},
 }
 
 @InProceedings{padfield2010,
@@ -1508,6 +1509,65 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   abstract = {The degree of spectral coherence characterizes the spectral purity of light. It can be equivalently expressed in the time domain by the decay time τ or the quality factor Q of the light-emitting oscillator, the coherence time τ coh or length ℓcoh of emitted light or, via Fourier transformation to the frequency domain, the linewidth Δν of emitted light. We quantify these parameters for the reference situation of a passive Fabry-Pérot resonator. We investigate its spectral line shapes, mode profiles, and Airy distributions and verify that the sum of all mode profiles generates the corresponding Airy distribution. The Fabry-Pérot resonator is described, as an oscillator, by its Lorentzian linewidth and finesse and, as a scanning spectrometer, by its Airy linewidth and finesse. Furthermore, stimulated and spontaneous emission are analyzed semi-classically by employing Maxwell′s equations and the law of energy conservation. Investigation of emission by atoms inside a Fabry-Pérot resonator, the Lorentz oscillator model, the Kramers-Kronig relations, the amplitude-phase diagram, and the summation of quantized electric fields consistently suggests that stimulated and spontaneous emission of light occur with a phase 90° in lead of the incident field. These findings question the quantum-optical picture, which proposed, firstly, that stimulated emission occurred in phase, whereas spontaneous emission occurred at an arbitrary phase angle with respect to the incident field and, secondly, that the laser linewidth were due to amplitude and phase fluctuations induced by spontaneous emission. We emphasize that the first derivation of the Schawlow-Townes laser linewidth was entirely semi-classical but included the four approximations that (i) it is a truly continuous-wave (cw) laser, (ii) it is an ideal four-level laser, (iii) its resonator exhibits no intrinsic losses, and (iv) one photon is coupled spontaneously into the lasing mode per photon-decay time τc of the resonator, independent of the pump rate. After discussing the inconsistencies of existing semi-classical and quantum-optical descriptions of the laser linewidth, we introduce the spectral-coherence factor, which quantifies spectral coherence in an active compared to its underlying passive mode, and derive semi-classically, based on the principle that the gain elongates the photon-decay time and narrows the linewidth, the fundamental linewidth of a single lasing mode. This linewidth is valid for lasers with an arbitrary energy-level system, operating below, at, or above threshold and in a cw or a transient lasing regime, with the gain being smaller, equal, or larger compared to the losses. By applying approximations (i)-(iv) we reproduce the original Schawlow-Townes equation. It provides the hitherto missing link between the description of the laser as an amplifier of spontaneous emission and the Schawlow-Townes equation. Spontaneous emission entails that in a cw lasing mode the gain is smaller than the losses. We verify that also in the quantum-optical approaches to the laser linewidth, based on the density-operator master equation, the gain is smaller than the losses. We conclude this work by presenting the derivation of the laser linewidth in a nut shell.},
   doi      = {10.1016/j.pquantelec.2020.100255},
   keywords = {Spectral coherence, Optical resonance, Fabry-Pérot resonator, Resonator linewidth, Finesse, Lasers, Laser theory, Laser resonators, Laser linewidth, Schawlow-Townes equation},
+}
+
+@Article{sun2020,
+  author        = {Sun, Yanwen and Montana-Lopez, Jordi and Fuoss, Paul and Sutton, Mark and Zhu, Diling},
+  journal       = {Journal of synchrotron radiation},
+  title         = {Accurate contrast determination for X-ray speckle visibility spectroscopy},
+  year          = {2020},
+  month         = {07},
+  number        = {Pt 4},
+  pages         = {999--1007},
+  volume        = {27},
+  abstract      = {X-ray speckle visibility spectroscopy using X-ray free-electron lasers has long been proposed as a probe of fast dynamics in noncrystalline materials. In this paper, numerical modeling is presented to show how the data interpretation of visibility spectroscopy can be impacted by the nonidealities of real-life X-ray detectors. Using simulated detector data, this work provides a detailed analysis of the systematic errors of several contrast extraction algorithms in the context of low-count-rate X-ray speckle visibility spectroscopy and their origins are discussed. Here, it was found that the finite detector charge cloud and pixel size lead to an unavoidable `degeneracy' in photon position determination, and that the contrasts extracted using different algorithms can all be corrected by a simple linear model. The results suggest that experimental calibration of the correction coefficient at the count rate of interest is possible and essential. This allows computationally lightweight algorithms to be implemented for on-the-fly analysis.},
+  an            = {33566009},
+  bdsk-url-1    = {https://pubmed.ncbi.nlm.nih.gov/33566009},
+  bdsk-url-2    = {https://doi.org/10.1107/S1600577520006773},
+  date          = {2020/07/01},
+  date-added    = {2021-10-21 10:08:31 +0000},
+  date-modified = {2021-10-21 10:08:31 +0000},
+  db            = {PubMed},
+  doi           = {10.1107/S1600577520006773},
+  et            = {2020/06/19},
+  isbn          = {1600-5775; 0909-0495},
+  j2            = {J Synchrotron Radiat},
+  keywords      = {X-ray speckle visibility spectroscopy; XPCS; photon locating algorithms},
+  l2            = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7336177/},
+  la            = {eng},
+  publisher     = {International Union of Crystallography},
+  ty            = {JOUR},
+  u1            = {33566009{$[$}pmid{$]$}},
+  u2            = {PMC7336177{$[$}pmcid{$]$}},
+  u4            = {S1600577520006773{$[$}PII{$]$}},
+}
+
+@PhdThesis{nion2008,
+  author = {Thibauld Nion},
+  school = {École NationaleSupérieure des Mines de Paris},
+  title  = {{Covariances et corrélations: nomenclature et implantation} in {Modélisation mathématique de l’évolution de la topographie des couches successivesdes surfaces peintes destinées au secteur automobile}},
+  year   = {2008},
+  type   = {PhD thesis},
+}
+
+@InBook{oppenheim2009,
+  author    = {Oppenheim, Alan V. and Schafer, Ronald W.},
+  chapter   = {The Discrete Fourier Transform},
+  pages     = {541ff},
+  publisher = {Prentice Hall Press},
+  title     = {Discrete-Time Signal Processing},
+  year      = {2009},
+  address   = {USA},
+  edition   = {3rd},
+  isbn      = {0131988425},
+  abstract  = {For senior/graduate-level courses in Discrete-Time Signal Processing. THE definitive,
+authoritative text on DSP -- ideal for those with an introductory-level knowledge
+of signals and systems. Written by prominent, DSP pioneers, it provides thorough treatment
+of the fundamental theorems and properties of discrete-time linear systems, filtering,
+sampling, and discrete-time Fourier Analysis. By focusing on the general and universal
+concepts in discrete-time signal processing, it remains vital and relevant to the
+new challenges arising in the field --without limiting itself to specific technologies
+with relatively short life spans.},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
