--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -139,6 +139,8 @@
 \DeclareMathOperator{\Var}{Var}
 \DeclareMathOperator{\rect}{rect}
 \DeclareMathOperator{\sinc}{sinc}
+\DeclareMathSymbol{\shortminus}{\mathbin}{AMSa}{"39}
+
 %%pygments%
 \usepackage{fancyvrb}
 \usepackage{xcolor}
