--- a/Tex/thanks.tex
+++ b/Tex/thanks.tex
@@ -1,12 +1,16 @@
 \begingroup
-\let\cleardoulbepage\relax
-\let\clearepage\relax
+\let\cleardoublepage\relax
+\let\clearpage\relax
 \chapter*{Acknowledgements}
 \endgroup
 \onehalfspacing
-I would like to thank my supervisors, Tais Gorkhover and Thomas Möller, for their continued support; 
-Stephan Kuschel, Matt Ware, and Siqi Li for the warm welcome to California, allowing me to learn from them (not only about the behavior of Selachimorpha), joined discussions, planning, preparation, and execution of the experiments; An Marshal for the help in getting the TEM images; Ben Reeves for his preparation of the GaAs samples.
+I would like to thank my supervisors, Tais Gorkhover and Thomas Möller, for their continued support and the Gorkhover group at SLAC, i.e. Stephan Kuschel, Matt Ware, and Siqi Li, for the warm welcome to California, allowing me to learn from them (not only about the behavior of Selachimorpha), joined discussions, planning, preparation, and execution of the experiments.
 
-I greatly appreciate Jordon O'Neal, Peiho Sun, Yanwen Sun, Ichiro Inoue, and Taito Osako, and the rest of the team at the SACLA beam time for supporting us. A special mention of Siqi Li's masterful handling of Stephan's, my, and Tais' (not at all times coherent) suggestions while being the only person of our group physically at SSRL during Covid-19  for the sample characterization beamtime as to be made.
+I'd to thank An Marshal for the help in getting the TEM images, Ben Reeves for his preparation of the GaAs samples, Carina Hedrich for the AAO sample preparation, 
+Amy Cordones-Hahn for guidance in chemistry and Cindy Patty for general awesomeness.
+
+I greatly appreciate Diling Zhu, Peiho Sun, Yanwen Sun, Jordon O'Neal, Ichiro Inoue, and Taito Osako, and the rest of the team at the SACLA beam time for supporting our group. 
+
+A special mention of Siqi Li's masterful handling of Stephan's, my, and Tais' (not at all times coherent) suggestions while being the only person of our group physically at SSRL during Covid-19  for the sample characterization beamtime as to be made.
 
 Last but certainly not least, I'd like to thank those close to me for their empathy and great support.
